more copy adjustments based on collaborator comments

--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -69,7 +69,7 @@
       <div class="✨">
         <h2>Code of Conduct (CoC)</h2>
         <p>
-          People are awesome. People are awesome in different ways. We would like people to be awesome in their own way at our events. Our commitment is to provide a safe space for all of us to get together and talk about accessibility topics we're passionate about.
+          People are awesome. People are awesome in different ways. We would like people to be awesome in their own way at our events. Our goal is to provide an atmosphere where all of us can get together.
         </p>
         <p>
           To get into more specifics, this means we do not tolerate any harassment or disrespect of our attendees due to age, body size, disability, ethnicity, gender identity and expression, level of experience, education, socio-economic status, nationality, personal appearance, race, religion, or sexual identity and orientation.
@@ -101,7 +101,7 @@
         <ul>
           <li>Any unwelcome sexual attention or advances including the use of sexualized language or imagery, sexualized comments or jokes, or inappropriate touching or groping.</li>
           <li>Inappropriate physical contact; you should have someone’s consent before touching them</li>
-          <li>Trolling, insulting/derogatory comments, discriminatory jokes or language, and personal or political attacks</li>
+          <li>Trolling, insulting/derogatory comments, and discriminatory jokes or language</li>
           <li>Public or private harassment including intimidation, stalking or following (online or in person)</li>
           <li>Publishing others’ private information, such as a physical or electronic address, without explicit permission</li>
           <li>Advocating for, or encouraging, any of the above behavior</li>
