Add speakers and attendees

--- a/in/amsterdam/2019-06-15.html
+++ b/in/amsterdam/2019-06-15.html
@@ -109,6 +109,15 @@
 
         <ul class="people speakers">
             <li>
+              <a href="https://twitter.com/aisha">
+                <img src="/images/speakers/Aisha.jpg" alt="">
+                <div>
+                  <span>Aisha Sie</span>
+                  <i>she/her</i>
+                </div>
+              </a>
+            </li>
+            <li>
               <a href="https://twitter.com/iamhiwelo">
                 <img src="/images/speakers/Damien.jpg" alt="">
                 <div>
@@ -153,6 +162,15 @@
                 <div>
                   <span>Nienke Dekker</span>
                   <i>she/her</i>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="https://twitter.com/erikkroes">
+                <img src="/images/attendees/Erik-Kroes.jpg" alt="">
+                <div>
+                  <span>Erik Kroes</span>
+                  <i></i>
                 </div>
               </a>
             </li>
