Add Wilco Fiers

--- a/in/amsterdam/2019-06-15.html
+++ b/in/amsterdam/2019-06-15.html
@@ -166,6 +166,15 @@
               </a>
             </li>
             <li>
+              <a href="https://twitter.com/wilcofiers">
+                <img src="/images/attendees/Wilco-Fiers.jpg" alt="">
+                <div>
+                  <span>Wilco Fiers</span>
+                  <i></i>
+                </div>
+              </a>
+            </li>
+            <li>
               <a href="https://twitter.com/erikkroes">
                 <img src="/images/attendees/Erik-Kroes.jpg" alt="">
                 <div>
