--- a/in/amsterdam/2019-06-15.html
+++ b/in/amsterdam/2019-06-15.html
@@ -118,6 +118,16 @@
               </a>
             </li>
             <li>
+              <a href="https://twitter.com/bramduvigneau">
+                <img src="/images/speakers/Bram-Duvigneau.jpg" alt="">
+                <div>
+                  <span>Bram Duvigneau</span>
+                  <i>he/him</i>
+                </div>
+              </a>
+              <p>Bram will tell about his experience as a blind user switching from iOS to Android.</p>
+            </li>
+            <li>
               <a href="https://twitter.com/iamhiwelo">
                 <img src="/images/speakers/Damien.jpg" alt="">
                 <div>
