Add some people

--- a/in/amsterdam/2019-06-15.html
+++ b/in/amsterdam/2019-06-15.html
@@ -167,6 +167,15 @@
               </a>
             </li>
             <li>
+              <a href="https://twitter.com/deanbirkett">
+                <img src="/images/speakers/Dean.jpg" alt="">
+                <div>
+                  <span>Dean Birkett</span>
+                  <i>he/him</i>
+                </div>
+              </a>
+            </li>
+            <li>
               <a href="https://twitter.com/helenasometimes">
                 <img src="/images/speakers/Nienke.jpg" alt="">
                 <div>
@@ -180,7 +189,7 @@
                 <img src="/images/attendees/Wilco-Fiers.jpg" alt="">
                 <div>
                   <span>Wilco Fiers</span>
-                  <i></i>
+                  <i>he/him</i>
                 </div>
               </a>
             </li>
