Moar speakers and attendees

--- a/in/amsterdam/2019-06-15.html
+++ b/in/amsterdam/2019-06-15.html
@@ -137,6 +137,16 @@
               </a>
             </li>
             <li>
+              <a href="https://twitter.com/Raisaveuc">
+                <img src="/images/speakers/Raisa.jpg" alt="">
+                <div>
+                  <span>Raisa</span>
+                  <i>she/her</i>
+                </div>
+              </a>
+              <p>Raisa wants to tell us about empathy building tools <span role="img" aria-label="sparkly star">🌟</span>.</p>
+            </li>
+            <li>
               <a href="https://twitter.com/WalterStephanie">
                 <img src="/images/speakers/StephanieWalter.jpg" alt="">
                 <div>
@@ -194,11 +204,29 @@
               </a>
             </li>
             <li>
+              <a href="https://twitter.com/AshKyd">
+                <img src="/images/attendees/Ash-Kyd.jpg" alt="">
+                <div>
+                  <span>Ash Kyd</span>
+                  <i>he/him</i>
+                </div>
+              </a>
+            </li>
+            <li>
               <a href="https://twitter.com/erikkroes">
                 <img src="/images/attendees/Erik-Kroes.jpg" alt="">
                 <div>
                   <span>Erik Kroes</span>
-                  <i></i>
+                  <i>he/him</i>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="https://twitter.com/RianRietveld">
+                <img src="/images/attendees/Rian-Rietveld.jpg" alt="">
+                <div>
+                  <span>Rian Rietveld</span>
+                  <i>she/her</i>
                 </div>
               </a>
             </li>
