--- a/in/amsterdam/2019-06-15.html
+++ b/in/amsterdam/2019-06-15.html
@@ -230,6 +230,15 @@
                 </div>
               </a>
             </li>
+            <li>
+                <a href="https://twitter.com/imrayana">
+                    <img src="/images/attendees/Rayana-Verissimo.jpg" alt="">
+                    <div>
+                        <span>Rayana Verissimo</span>
+                        <i></i>
+                    </div>
+                </a>
+            </li>
         </ul>
       </div>
     </section>
