--- a/in/amsterdam/2019-06-15.html
+++ b/in/amsterdam/2019-06-15.html
@@ -235,7 +235,7 @@
                     <img src="/images/attendees/Rayana-Verissimo.jpg" alt="">
                     <div>
                         <span>Rayana Verissimo</span>
-                        <i></i>
+                        <i>she/her</i>
                     </div>
                 </a>
             </li>
