Some perf updates

--- a/in/amsterdam/2019-06-15.html
+++ b/in/amsterdam/2019-06-15.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
+  <meta name="description" content="role=drinks is an accessibility meet-up with lightning talks and more than enough time to grab a drink with fellow attendees.">
   <title>Accessibility Meetup: role=drinks | June 15, 2019, Amsterdam</title>
   <link rel="stylesheet" href="/whisky.css">
 
@@ -110,7 +111,7 @@
         <ul class="people speakers">
             <li>
               <a href="https://twitter.com/aisha">
-                <img src="/images/speakers/Aisha.jpg" alt="">
+                <img src="/images/speakers/Aisha_66.jpg" alt="">
                 <div>
                   <span>Aisha Sie</span>
                   <i>she/her</i>
@@ -119,7 +120,7 @@
             </li>
             <li>
               <a href="https://twitter.com/bramduvigneau">
-                <img src="/images/speakers/Bram-Duvigneau.jpg" alt="">
+                <img src="/images/speakers/Bram-Duvigneau_66.jpg" alt="">
                 <div>
                   <span>Bram Duvigneau</span>
                   <i>he/him</i>
@@ -129,7 +130,7 @@
             </li>
             <li>
               <a href="https://twitter.com/iamhiwelo">
-                <img src="/images/speakers/Damien.jpg" alt="">
+                <img src="/images/speakers/Damien_66.jpg" alt="">
                 <div>
                   <span>Damien Senger</span>
                   <i>they/them</i>
@@ -138,7 +139,7 @@
             </li>
             <li>
               <a href="https://twitter.com/Raisaveuc">
-                <img src="/images/speakers/Raisa.jpg" alt="">
+                <img src="/images/speakers/Raisa_66.jpg" alt="">
                 <div>
                   <span>Raisa</span>
                   <i>she/her</i>
@@ -148,7 +149,7 @@
             </li>
             <li>
               <a href="https://twitter.com/WalterStephanie">
-                <img src="/images/speakers/StephanieWalter.jpg" alt="">
+                <img src="/images/speakers/StephanieWalter_66.jpg" alt="">
                 <div>
                   <span>Stéphanie Walter</span>
                   <i>she/her</i>
@@ -169,7 +170,7 @@
         <ul class="people" hidden>
             <li>
               <a href="https://twitter.com/MichielBijl">
-                <img src="/images/speakers/Michiel.jpg" alt="">
+                <img src="/images/speakers/Zoe_66.jpg" alt="">
                 <div>
                   <span>Michiel “Zoë” Bijl</span>
                   <i>they/them</i>
@@ -178,7 +179,7 @@
             </li>
             <li>
               <a href="https://twitter.com/deanbirkett">
-                <img src="/images/speakers/Dean.jpg" alt="">
+                <img src="/images/speakers/Dean_66.jpg" alt="">
                 <div>
                   <span>Dean Birkett</span>
                   <i>he/him</i>
@@ -187,7 +188,7 @@
             </li>
             <li>
               <a href="https://twitter.com/helenasometimes">
-                <img src="/images/speakers/Nienke.jpg" alt="">
+                <img src="/images/speakers/Nienke_66.jpg" alt="">
                 <div>
                   <span>Nienke Dekker</span>
                   <i>she/her</i>
@@ -196,7 +197,7 @@
             </li>
             <li>
               <a href="https://twitter.com/wilcofiers">
-                <img src="/images/attendees/Wilco-Fiers.jpg" alt="">
+                <img src="/images/attendees/Wilco-Fiers_66.jpg" alt="">
                 <div>
                   <span>Wilco Fiers</span>
                   <i>he/him</i>
@@ -205,7 +206,7 @@
             </li>
             <li>
               <a href="https://twitter.com/AshKyd">
-                <img src="/images/attendees/Ash-Kyd.jpg" alt="">
+                <img src="/images/attendees/Ash-Kyd_66.jpg" alt="">
                 <div>
                   <span>Ash Kyd</span>
                   <i>he/him</i>
@@ -214,7 +215,7 @@
             </li>
             <li>
               <a href="https://twitter.com/erikkroes">
-                <img src="/images/attendees/Erik-Kroes.jpg" alt="">
+                <img src="/images/attendees/Erik-Kroes_66.jpg" alt="">
                 <div>
                   <span>Erik Kroes</span>
                   <i>he/him</i>
@@ -223,7 +224,7 @@
             </li>
             <li>
               <a href="https://twitter.com/RianRietveld">
-                <img src="/images/attendees/Rian-Rietveld.jpg" alt="">
+                <img src="/images/attendees/Rian-Rietveld_66.jpg" alt="">
                 <div>
                   <span>Rian Rietveld</span>
                   <i>she/her</i>
@@ -232,7 +233,7 @@
             </li>
             <li>
                 <a href="https://twitter.com/imrayana">
-                    <img src="/images/attendees/Rayana-Verissimo.jpg" alt="">
+                    <img src="/images/attendees/Rayana-Verissimo_66.jpg" alt="">
                     <div>
                         <span>Rayana Verissimo</span>
                         <i>she/her</i>
