Update a bunch of things like attendees and location

--- a/in/amsterdam/2019-06-15.html
+++ b/in/amsterdam/2019-06-15.html
@@ -83,7 +83,7 @@
           <strong>Cool <span role="img" aria-label="hands raised in celebration">🙌🏼</span> When are we expected?</strong> It runs from 14:00 to 18:00.
           <br>
           <strong>Where is it <span role="img" aria-label="thinking face">🤔</span>?</strong>
-          TBD
+          Wicked Grounds, …, Amsterdam
           <span aria-hidden="true">🍻</span>
           <br>
           <strong>Costs?</strong> We will cover the venue, some snacks, and drinks
@@ -92,7 +92,7 @@
 
         <p>
           Sounds good right?
-          If you want to come, <a href="https://twitter.com/roledrinks">tell us on Twitter</a> or <a href="mailto:michiel@roledrinks.com">send us an e-mail</a>.
+          If you want to come, <a href="https://twitter.com/roledrinks">tell us on Twitter</a> or <a href="mailto:hello@roledrinks.com">send us an e-mail</a>.
         </p>
         <p>All links for people go to either their Twitter or Mastodon profile.</p>
 
@@ -156,6 +156,15 @@
                 </div>
               </a>
             </li>
+            <li>
+              <a href="https://twitter.com/matatk">
+                <img src="/images/speakers/Matt.jpg" alt="">
+                <div>
+                  <span>Matthew Tylee Atkinson</span>
+                  <i>he/him</i>
+                </div>
+              </a>
+            </li>
         </ul>
         <p>More speakers will be announced before the 15th of June.</p>
       </div>
@@ -169,10 +178,10 @@
 
         <ul class="people" hidden>
             <li>
-              <a href="https://twitter.com/MichielBijl">
+              <a href="https://twitter.com/ZoeBijl">
                 <img src="/images/speakers/Zoe_66.jpg" alt="">
                 <div>
-                  <span>Michiel “Zoë” Bijl</span>
+                  <span>Zoë Bijl</span>
                   <i>they/them</i>
                 </div>
               </a>
@@ -309,7 +318,7 @@
           <li><a href="https://www.flickr.com/photos/sebleedelisle/38331916651">Seb Lee-Delise</a> for Bruce's speaker photo</li>
           <li>Job for always being more than helpful and fighting fires off and on the web</li>
           <li>Andrea for her work on the websites copy</li>
-          <li>Michiel for scouting venues and their work on the website</li>
+          <li>Zoë for scouting venues and their work on the website</li>
           <li>All of our attendees for coming out</li>
           <li>Our sponsor, CSSDayConf, for making this all possible</li>
           <li>Thomas, for his debut as MC</li>
