--- a/in/amsterdam/2019-06-15.html
+++ b/in/amsterdam/2019-06-15.html
@@ -83,7 +83,7 @@
           <strong>Cool <span role="img" aria-label="hands raised in celebration">🙌🏼</span> When are we expected?</strong> It runs from 14:00 to 18:00.
           <br>
           <strong>Where is it <span role="img" aria-label="thinking face">🤔</span>?</strong>
-          Wicked Grounds, …, Amsterdam
+          Wicked Grounds: Doctor Jan van Breemenstraat 1, Amsterdam.
           <span aria-hidden="true">🍻</span>
           <br>
           <strong>Costs?</strong> We will cover the venue, some snacks, and drinks
