Uodate guest list

--- a/in/amsterdam/2019-06-15.html
+++ b/in/amsterdam/2019-06-15.html
@@ -249,6 +249,159 @@
                     </div>
                 </a>
             </li>
+            <li>
+                <a>
+                    <img src="/images/roledrinks-inverted.png" alt="">
+                    <div>
+                        <span>Andy Warburton</span>
+                        <i>he/him</i>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/AMConefrey">
+                    <img src="/images/roledrinks-inverted.png" alt="">
+                    <div>
+                        <span>Ann M. Conefrey</span>
+                        <i>she/her</i>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/dine">
+                    <img src="/images/roledrinks-inverted.png" alt="">
+                    <div>
+                        <span>Ariadine Gomes</span>
+                        <i></i>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/DanielKoster_UX">
+                    <img src="/images/roledrinks-inverted.png" alt="">
+                    <div>
+                        <span>Daniel Koster</span>
+                        <i>he/him</i>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/__eater__">
+                    <img src="/images/roledrinks-inverted.png" alt="">
+                    <div>
+                        <span>Eater</span>
+                        <i>they/them</i>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/paintingemily">
+                    <img src="/images/roledrinks-inverted.png" alt="">
+                    <div>
+                        <span>Emily Painter</span>
+                        <i></i>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/geoffreycrofte">
+                    <img src="/images/roledrinks-inverted.png" alt="">
+                    <div>
+                        <span>Geoffrey Crofte</span>
+                        <i>he/him</i>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/grimmweb">
+                    <img src="/images/roledrinks-inverted.png" alt="">
+                    <div>
+                        <span>Hans Grimm</span>
+                        <i>he/him</i>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/JakeAbma">
+                    <img src="/images/roledrinks-inverted.png" alt="">
+                    <div>
+                        <span>Jake Abma</span>
+                        <i>he/him</i>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a>
+                    <img src="/images/roledrinks-inverted.png" alt="">
+                    <div>
+                        <span>José Rosário</span>
+                        <i></i>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/stommepoes">
+                    <img src="/images/roledrinks-inverted.png" alt="">
+                    <div>
+                        <span>Mallory</span>
+                        <i>she/her</i>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/fnch">
+                    <img src="/images/roledrinks-inverted.png" alt="">
+                    <div>
+                        <span>Marcos Mellado</span>
+                        <i>he/him</i>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/roelvangils">
+                    <img src="/images/roledrinks-inverted.png" alt="">
+                    <div>
+                        <span>Roel van Gils</span>
+                        <i></i>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/usethetics">
+                    <img src="/images/roledrinks-inverted.png" alt="">
+                    <div>
+                        <span>Rogier Barendregt</span>
+                        <i>it/its or he/him</i>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/mxsash">
+                    <img src="/images/roledrinks-inverted.png" alt="">
+                    <div>
+                        <span>Sasha</span>
+                        <i>she/her</i>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/TommieWoef">
+                    <img src="/images/roledrinks-inverted.png" alt="">
+                    <div>
+                        <span>Tommie Woe‏f</span>
+                        <i>he/him</i>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/zmmorabya">
+                    <img src="/images/roledrinks-inverted.png" alt="">
+                    <div>
+                        <span>Zainab Oraby</span>
+                        <i>she/her</i>
+                    </div>
+                </a>
+            </li>
         </ul>
       </div>
     </section>
