Correct Zoë’s name

--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -122,7 +122,7 @@
             <a href="mailto:hello@roledrinks.com">hello@roledrinks.com</a>
           </li>
           <li>Phone:
-            <a href="tel:+31657910007">+31 6 57 910 007</a> (Michiel)</li>
+            <a href="tel:+31657910007">+31 6 57 910 007</a> (Zoë)</li>
           <li>Twitter:
             <a href="https://twitter.com/roledrinks">@roledrinks</a> (DMs are open)</li>
         </ul>
