--- a/in/amsterdam/2016-10-08.html
+++ b/in/amsterdam/2016-10-08.html
@@ -127,10 +127,10 @@
             </li>
 
             <li>
-              <a href="https://twitter.com/MichielBijl">
-                <img src="/images/speakers/Michiel.jpg" alt="">
+              <a href="https://twitter.com/ZoeBijl">
+                <img src="/images/speakers/Zoe_66.jpg" alt="">
                 <div>
-                  <span>Michiel Bijl</span>
+                  <span>Zoë Bijl</span>
                   <i><abbr title="The Paciello Group">TPG</abbr></i>
                 </div>
               </a>
@@ -335,10 +335,10 @@
             </li>
 
             <li>
-              <a href="https://twitter.com/MichielBijl">
+              <a href="https://twitter.com/ZoeBijl">
                 <img src="https://pbs.twimg.com/profile_images/788360032702398464/zLavFXlw_400x400.jpg" alt="">
                 <div>
-                  <span>Michiel Bijl</span>
+                  <span>Zoë Bijl</span>
                   <i><abbr title="The Paciello Group">TPG</abbr></i>
                 </div>
               </a>
