--- a/in/amsterdam/2018-01-22.html
+++ b/in/amsterdam/2018-01-22.html
@@ -91,7 +91,7 @@
 
         <p>
           Sounds good right?
-          If you want to come, <a href="https://twitter.com/roledrinks">tell us on Twitter</a> or <a href="mailto:michiel@roledrinks.com">send us an e-mail</a>.
+          If you want to come, <a href="https://twitter.com/roledrinks">tell us on Twitter</a> or <a href="mailto:hello@roledrinks.com">send us an e-mail</a>.
         </p>
         <p>All links for people go to their Twitter profile.</p>
       </div>
@@ -191,10 +191,10 @@
           </li>
 
           <li>
-            <a href="https://twitter.com/MichielBijl">
-              <img src="/images/speakers/Michiel.jpg" alt="">
+            <a href="https://twitter.com/ZoeBijl">
+              <img src="/images/speakers/Zoe_66.jpg" alt="">
               <div>
-                <span>Michiel Bijl</span>
+                <span>Zoë Bijl</span>
                 <i>Funda</i>
               </div>
             </a>
