--- a/in/amsterdam/2018-06-16.html
+++ b/in/amsterdam/2018-06-16.html
@@ -91,7 +91,7 @@
 
         <p>
           Sounds good right?
-          If you want to come, <a href="https://twitter.com/roledrinks">tell us on Twitter</a> or <a href="mailto:michiel@roledrinks.com">send us an e-mail</a>.
+          If you want to come, <a href="https://twitter.com/roledrinks">tell us on Twitter</a> or <a href="mailto:hello@roledrinks.com">send us an e-mail</a>.
         </p>
         <p>All links for people go to their Twitter profile.</p>
           
@@ -165,10 +165,10 @@
         <ul class="people">
 
           <li>
-            <a href="https://twitter.com/MichielBijl">
-              <img src="/images/speakers/Michiel.jpg" alt="">
+            <a href="https://twitter.com/ZoeBijl">
+              <img src="/images/speakers/Zoe_66.jpg" alt="">
               <div>
-                <span>Michiel Bijl (Organiser)</span>
+                <span>Zoë Bijl (Organiser)</span>
               </div>
             </a>
           </li>
@@ -497,7 +497,7 @@
           <li><a href="https://www.flickr.com/photos/sebleedelisle/38331916651">Seb Lee-Delise</a> for Bruce's speaker photo</li>
           <li>Job for always being more than helpful and fighting fires off and on the web</li>
           <li>Andrea for her work on the websites copy</li>
-          <li>Michiel for scouting venues and their work on the website</li>
+          <li>Zoë for scouting venues and their work on the website</li>
           <li>All of our attendees for coming out</li>
           <li>Our sponsor, CSSDayConf, for making this all possible</li>
           <li>Thomas, for his debut as MC</li>
