--- a/in/dieren/index.html
+++ b/in/dieren/index.html
@@ -66,7 +66,7 @@
         <div class="✨">
           <h2>Details</h2>
           <p>
-            The first ever role=drinks was the result of Bram Duvigneau replying to an article Michiel Bijl wrote in which he said <q>If you care about accessibility and are ever in Arnhem you can get a whisky on me.</q>
+            The first ever role=drinks was the result of Bram Duvigneau replying to an article Zoë Bijl wrote in which he said <q>If you care about accessibility and are ever in Arnhem you can get a whisky on me.</q>
             Once Bram got the ball rolling more and more people joined in.
           </p>
           <p>All links for people go to their Twitter profile.</p>
@@ -129,10 +129,10 @@
             </li>
 
             <li>
-              <a href="https://twitter.com/MichielBijl">
+              <a href="https://twitter.com/ZoeBijl">
                 <img src="https://pbs.twimg.com/profile_images/788360032702398464/zLavFXlw_400x400.jpg" alt="">
                 <div>
-                  <span>Michiel Bijl</span>
+                  <span>Zoë Bijl</span>
                   <i><abbr title="The Paciello Group">TPG</abbr></i>
                 </div>
               </a>
@@ -173,7 +173,7 @@
           <h2>Photos</h2>
           <p>Some photos that have survived:</p>
           <img src="/images/photos/dieren-1.jpg" alt="Five bottles of whisky and one bottle of rum lined up at an #a11y meeting, Tim and Iacobien in the background.">
-          <img src="/images/photos/dieren-2.jpg" alt="Job and Michiel having a conversation with bottles of whisky in the foreground.">
+          <img src="/images/photos/dieren-2.jpg" alt="Job and Zoë having a conversation with bottles of whisky in the foreground.">
         </div>
       </section>
     </main>
