--- a/in/hamburg/index.html
+++ b/in/hamburg/index.html
@@ -85,7 +85,7 @@
 
           <p>
             Sounds good right?
-            If you want to come, <a href="https://twitter.com/roledrinks">tell us on Twitter</a> or <a href="mailto:michiel@roledrinks.com">send Lasse an e-mail</a>.
+            If you want to come, <a href="https://twitter.com/roledrinks">tell us on Twitter</a> or <a href="mailto:hello@roledrinks.com">send Lasse an e-mail</a>.
             We also have a few people give a so called lightning talk—these are short talks that last anywhere between 5 and 10 minutes.
             If all goes as planned, these lightning talks will start around 14:30.
           </p>
