--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
       <div class="✨">
         <h2>Run one of your own!</h2>
         <p>Please
-          <a href="https://twitter.com/MichielBijl">remind Michiel</a> to write this section.</p>
+          <a href="https://twitter.com/ZoeBijl">remind Zoë</a> to write this section.</p>
       </div>
     </section>
   </main>
