--- a/in/amsterdam/2016-06-18.html
+++ b/in/amsterdam/2016-06-18.html
@@ -148,10 +148,10 @@
             </li>
 
             <li>
-              <a href="https://twitter.com/MichielBijl">
+              <a href="https://twitter.com/ZoeBijl">
                 <img src="https://pbs.twimg.com/profile_images/788360032702398464/zLavFXlw_400x400.jpg" alt="">
                 <div>
-                  <span>Michiel Bijl</span>
+                  <span>Zoë Bijl</span>
                   <i><abbr title="The Paciello Group">TPG</abbr></i>
                 </div>
               </a>
@@ -411,10 +411,10 @@
             </li>
 
             <li>
-              <a href="https://twitter.com/MichielBijl">
+              <a href="https://twitter.com/ZoeBijl">
                 <img src="https://pbs.twimg.com/profile_images/788360032702398464/zLavFXlw_400x400.jpg" alt="">
                 <div>
-                  <span>Michiel Bijl</span>
+                  <span>Zoë Bijl</span>
                   <i><abbr title="The Paciello Group">TPG</abbr></i>
                 </div>
               </a>
