--- a/in/amsterdam/2017-10-07.html
+++ b/in/amsterdam/2017-10-07.html
@@ -80,7 +80,7 @@
 
           <p>
             Sounds good right?
-            If you want to come, <a href="https://twitter.com/roledrinks">tell us on Twitter</a> or <a href="mailto:michiel@roledrinks.com">send us an e-mail</a>.
+            If you want to come, <a href="https://twitter.com/roledrinks">tell us on Twitter</a> or <a href="mailto:hello@roledrinks.com">send us an e-mail</a>.
             We also have a few people give a so called lightning talk—these are short talks that last anywhere between 5 and 10 minutes.
             If all goes as planned, these lightning talks will start around 15:00.
           </p>
@@ -285,10 +285,10 @@
             </li>
 
             <li>
-              <a href="https://twitter.com/MichielBijl">
-                <img src="/images/speakers/Michiel.jpg" alt="">
+              <a href="https://twitter.com/ZoeBijl">
+                <img src="/images/speakers/Zoe_66.jpg" alt="">
                 <div>
-                  <span>Michiel Bijl</span>
+                  <span>Zoë Bijl</span>
                   <i>Funda</i>
                 </div>
               </a>
