--- a/in/brighton/index.html
+++ b/in/brighton/index.html
@@ -86,7 +86,7 @@
 
           <p>
             Sounds good right?
-            If you want to come, <a href="https://twitter.com/roledrinks">tell us on Twitter</a> or <a href="mailto:michiel@roledrinks.com">send Michiel an e-mail</a>.
+            If you want to come, <a href="https://twitter.com/roledrinks">tell us on Twitter</a> or <a href="mailto:hello@roledrinks.com">send Zoë an e-mail</a>.
             We also have a few people give a so called lightning talk—these are short talks that last anywhere between 5 and 10 minutes.
             If all goes as planned, these lightning talks will start around 14:30.
           </p>
@@ -140,14 +140,14 @@
               <p>Matthew has chartered some of our time to talk about charts and how to make them accessible to people with vision impairments.</p>
             </li>
             <li>
-              <a href="https://twitter.com/MichielBijl">
-                <img src="/images/speakers/Michiel.jpg" alt="">
+              <a href="https://twitter.com/ZoeBijl">
+                <img src="/images/speakers/Zoe_66.jpg" alt="">
                 <div>
-                  <span>Michiel Bijl</span>
+                  <span>Zoë Bijl</span>
                   <i><abbr title="The Paciello Group">TPG</abbr></i>
                 </div>
               </a>
-              <p>Michiel describes images in 140 characters.</p>
+              <p>Zoë describes images in 140 characters.</p>
             </li>
           </ul>
         </div>
@@ -239,10 +239,10 @@
               </a>
             </li>
             <li>
-              <a href="https://twitter.com/MichielBijl">
-                <img src="/images/speakers/Michiel.jpg" alt="">
+              <a href="https://twitter.com/ZoeBijl">
+                <img src="/images/speakers/Zoe_66.jpg" alt="">
                 <div>
-                  <span>Michiel Bijl</span>
+                  <span>Zoë Bijl</span>
                   <i><abbr title="The Paciello Group">TPG</abbr></i>
                 </div>
               </a>
