Update guest liswtt

--- a/in/amsterdam/2019-06-15.html
+++ b/in/amsterdam/2019-06-15.html
@@ -196,6 +196,15 @@
               </a>
             </li>
             <li>
+              <a href="https://twitter.com/evawesterhoff">
+                <img src="/images/attendees/Eva-Westerhoff.jpg" alt="">
+                <div>
+                  <span>Eva Westerhoff</span>
+                  <i>she/her</i>
+                </div>
+              </a>
+            </li>
+            <li>
               <a href="https://twitter.com/helenasometimes">
                 <img src="/images/speakers/Nienke_66.jpg" alt="">
                 <div>
@@ -231,7 +240,7 @@
                 </div>
               </a>
             </li>
-            <li>
+            <li hidden>
               <a href="https://twitter.com/RianRietveld">
                 <img src="/images/attendees/Rian-Rietveld_66.jpg" alt="">
                 <div>
@@ -340,6 +349,15 @@
                 </a>
             </li>
             <li>
+                <a href="https://twitter.com/LucasBarboza">
+                    <img src="/images/roledrinks-inverted.png" alt="">
+                    <div>
+                        <span>Lucas Barboza</span>
+                        <i>he/him</i>
+                    </div>
+                </a>
+            </li>
+            <li>
                 <a href="https://twitter.com/stommepoes">
                     <img src="/images/roledrinks-inverted.png" alt="">
                     <div>
@@ -380,6 +398,15 @@
                     <img src="/images/roledrinks-inverted.png" alt="">
                     <div>
                         <span>Sasha</span>
+                        <i>she/her</i>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/sofia_agomez">
+                    <img src="/images/roledrinks-inverted.png" alt="">
+                    <div>
+                        <span>Sofia Gomez</span>
                         <i>she/her</i>
                     </div>
                 </a>
